# turkish-py

./: .gitignore  README.MD  pyproject.toml  turkish.py  turkishPy.sh
