[tool.poetry]
name = "turkishPy"
version = "0.1.0"
description = "A project which tries to localize Python in a basic level"
authors = ["Asocia <akkayas17@itu.edu.tr>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
